{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 70,
  "lineage": "7f7c31fa-8e62-f0f9-6114-2fe50933592f",
  "resources": [
    {
      "module": "module.gke_cluster",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/probable-anchor-305803/regions/us-west2/subnetworks/gke-demo-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke-demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/networks/gke-demo",
            "private_ip_google_access": false,
            "project": "probable-anchor-305803",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "gke-demo-ips-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "gke-demo-ips-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/regions/us-west2/subnetworks/gke-demo-subnet"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "ah"
              },
              {
                "ports": [],
                "protocol": "esp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "sctp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-03-30T18:38:57.478-07:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow pods to communicate with each other and the master",
            "destination_ranges": [
              "10.0.0.0/24",
              "10.1.0.0/16",
              "34.94.39.169/32"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-anchor-305803/global/firewalls/gke-probable-anchor-305803-cl-intra-cluster-egress",
            "log_config": [],
            "name": "gke-probable-anchor-305803-cl-intra-cluster-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/networks/gke-demo",
            "priority": 1000,
            "project": "probable-anchor-305803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/firewalls/gke-probable-anchor-305803-cl-intra-cluster-egress",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-probable-anchor-305803-cluster-us-west2"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.google_container_cluster.primary",
            "module.gke_cluster.google_service_account.cluster_service_account",
            "module.gke_cluster.random_shuffle.available_zones",
            "module.gke_cluster.random_string.cluster_service_account_suffix",
            "module.gke_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-30T18:38:57.605-07:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-anchor-305803/global/firewalls/gke-probable-anchor-305803-cl-webhooks",
            "log_config": [],
            "name": "gke-probable-anchor-305803-cl-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/networks/gke-demo",
            "priority": 1000,
            "project": "probable-anchor-305803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/firewalls/gke-probable-anchor-305803-cl-webhooks",
            "source_ranges": [
              "34.94.39.169/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-probable-anchor-305803-cluster-us-west2"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.google_container_cluster.primary",
            "module.gke_cluster.google_service_account.cluster_service_account",
            "module.gke_cluster.random_shuffle.available_zones",
            "module.gke_cluster.random_string.cluster_service_account_suffix",
            "module.gke_network.module.subnets.google_compute_subnetwork.subnetwork",
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gke_network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/probable-anchor-305803/global/networks/gke-demo",
            "mtu": 0,
            "name": "gke-demo",
            "project": "probable-anchor-305803",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/networks/gke-demo"
          }
        }
      ]
    },
    {
      "module": "module.gke_network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke_network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-west2/gke-demo-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-30T18:32:29.741-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/probable-anchor-305803/regions/us-west2/subnetworks/gke-demo-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke-demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/global/networks/gke-demo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "probable-anchor-305803",
            "region": "us-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "gke-demo-ips-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "gke-demo-ips-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-anchor-305803/regions/us-west2/subnetworks/gke-demo-subnet"
          },
          "dependencies": [
            "module.gke_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}